Wed May 12 15:04:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath#log): improved
	  precision and performance. [ruby-dev:41295]

Tue May 11 14:26:00 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/math.rb (atan),
	  test/bigdecimal/test_bigmath.rb (test_atan): explicitly specify
	  the precision for calculating a reciprocal number of an argument.
	  [Bug #3267]

Tue May 11 14:10:36 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (rb_big_abs_find_minbit): get rid of a warning of VC.

Tue May 11 14:09:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_has_cancel_io): new
	  function.

	* io.c (WAIT_FD_IN_WIN32): check only when it's not cancelable.

Tue May 11 11:49:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/sdbm/sdbm.h (DBM): large file support on win32.
	  [ruby-core:23039]

	* ext/sdbm/depend: objects depend on sdbm.h.

Mon May 10 23:50:19 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): add a missing break.

Sun May  9 23:53:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): get rid of removal by
	  optimization.

Sun May  9 16:28:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (fiber_initialize_machine_stack_context): try to release
	  unnecessary fibers and retry to create.  based on a patch from
	  masaya tarui at [ruby-dev:41230].

Sun May  9 08:32:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (fbuffer_inc_capa):
	  fix tha use of REALLOC_N. [ruby-dev:41227]

Sun May  9 09:15:03 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: use IPv4 for
	  test_imaps_post_connection_check.  [ruby-dev:41189]

Sun May  9 02:57:02 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/lib/fiddle.rb: only require DL if it hasn't been required
	  yet. [ruby-core:30095]
